# l8git

./: README.md  index.html  merge-conflict-demo.txt  package-lock.json  package.json  vite.config.ts
.github/scripts/: compute-release-version.mjs  set-version.mjs
.github/workflows/: release.yml
src/: index.css  main.tsx  routeTree.gen.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cmd.rs  credentials.rs  favicon.rs  git.rs  lib.rs  main.rs  pr.rs  providers.rs  shell.rs  terminal.rs  watcher.rs
src/components/app/: app-header-branch-select.tsx  app-header-search.tsx  app-header.tsx  app-update-dialog.tsx  app-update-toast.tsx  repo-switcher.tsx
src/components/motion/: magic-pill.tsx  motion-provider.tsx  panel-swap.tsx  pop-in.tsx  stagger-card.tsx  tape-reveal.tsx
src/components/repo/: add-git-account.tsx  add-repo-button.tsx  branch-row.tsx  branch-section.tsx  commit-list.tsx  (+24 more)
src/lib/: ai-commit.ts  animation-prefs.ts  app-updater.ts  branch-groups.ts  commit-history-sections.ts  commit-prefs.ts  conflict-parser.ts  conventional-commit.ts  error-toast.ts  format.ts  git-accounts.ts  graph.ts  gravatar.ts  i18n.ts  locale-prefs.ts  repo-store.ts  sidebar-prefs.ts  terminal-store.ts  terminal-tab-title.ts  theme.ts  ui-store.ts  unified-diff.ts  use-app-hotkeys.ts  use-commit-panel-hotkeys.ts  use-pick-repo.ts  use-repo-rehydrate.ts  use-repo-status-poll.ts  use-theme.ts  utils.ts  workspace-prefs.ts  workspace-store.ts
src/locales/: de.json  en.json
src/routes/: __root.tsx  about.tsx  changelog.tsx  index.tsx  info.tsx  settings.tsx
(+116 files in other folders)
